# Encrypted-CLI

./: README.md  client.py  host.py  p2p.py  pyproject.toml  pyvenv.cfg
src/nodenet/: encryption.py  node.py
src/nodenet.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/nodenetwork.egg-info/: PKG-INFO  SOURCES.txt
