[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nodenetwork"
version = "0.1.0"
authors = [
  { name="razoring", email="raymondsosocials@gmail.com" },
]
description = "Encrypted P2P chat service using integrated network sockets interfaced securely through the CLI. No external imports needed."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GPL License",
    "Operating System :: OS Independent",
]

[project.scripts]
nodenet = "nodenet.node:main"

[tool.setuptools.packages.find]
where = ["src"]  # Look for packages in the 'src' directory